# volex

./: Cargo.toml  ci.sh  example.vol
doc/: reference.md  rpc_transport.md  wire_format.md
lolserialize-go-runtime/: go.mod  lolserialize.go
lolserialize-typescript-runtime/: lolserialize.ts  package.json
rpc-tester/: schema.vol
runtime-go/: go.mod  rpc.go  volex.go
runtime-rust/: Cargo.toml
runtime-rust/src/: lib.rs  rpc.rs
volexc/: Cargo.toml
volexc/src/: checker.rs  codegen.rs  codegen_go.rs  codegen_rust.rs  codegen_typescript.rs  lib.rs  main.rs  parser.rs
volexc/tests/: ui.rs
volexc/tests/ui/: check_duplicate_enum.out  check_duplicate_enum.vol  check_duplicate_enum_index.out  check_duplicate_enum_index.vol  check_duplicate_enum_variant.out  check_duplicate_enum_variant.vol  check_duplicate_message.out  check_duplicate_message.vol  check_duplicate_message_field.out  check_duplicate_message_field.vol  check_duplicate_message_index.out  check_duplicate_message_index.vol  check_duplicate_struct.out  check_duplicate_struct.vol  check_duplicate_struct_field.out  check_duplicate_struct_field.vol  check_duplicate_union.out  check_duplicate_union.vol  check_duplicate_union_index.out  check_duplicate_union_index.vol  check_duplicate_union_variant.out  check_duplicate_union_variant.vol  check_message_index_zero.out  check_message_index_zero.vol  check_undefined_type_array.out  check_undefined_type_array.vol  check_undefined_type_map_key.out  check_undefined_type_map_key.vol  check_undefined_type_map_value.out  check_undefined_type_map_value.vol  check_undefined_type_message.out  check_undefined_type_message.vol  check_undefined_type_struct.out  check_undefined_type_struct.vol  check_undefined_type_union.out  check_undefined_type_union.vol  check_union_index_zero.out  check_union_index_zero.vol  check_valid_primitives.vol  lex_integer_overflow.out  (+134 more)
(+52 files in other folders)
