[package]
name = "volexc"
version = "0.1.0"
edition = "2024"

[lib]
name = "volexc"
path = "src/lib.rs"

[dependencies]
chumsky = "0.12"
ariadne = "0.6"
clap = { version = "4.0", features = ["derive"] }
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
